--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -15,12 +15,17 @@
 .dl-horizontal dt {
     white-space: normal;
 }
-.approveText{
+.checkboxText{
     line-height:25px;
     vertical-align:bottom;
     margin-right:2px;
 }
-.shadedCaption {
+.shadedRoundCaption {
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
+.shadedRoundCaption, .shadedCaption {
     color: #DDD;
     background-color: #3a3f44;
     text-align: center;
@@ -37,7 +42,7 @@
     -webkit-filter: none;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
     filter: none;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    border-radius: 6px;
+}
+div.accordion .accordion-group .accordion-heading .accordion-toggle{
+    text-decoration:none;
 }
