--- a/Source/CriticalPath.Web/Views/Processes/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Processes/Create.cshtml
@@ -9,18 +9,18 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
-        
+        @Html.HiddenFor(m => m.PurchaseOrderId)
         <div class="form-group">
-            @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.PurchaseOrder, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.IsActive, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.IsActive, "", new { @class = "text-danger" })
+                @Html.DisplayFor(m => m.PurchaseOrder)
             </div>
         </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -43,13 +43,6 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.PurchaseOrderId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.DropDownList("PurchaseOrderId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.PurchaseOrderId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
             @Html.LabelFor(model => model.TargetDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.TargetDate, new { htmlAttributes = new { @class = "form-control" } })
@@ -61,27 +54,6 @@
             <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.EditorFor(m => m.ForecastDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(m => m.ForecastDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.RealizedDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.RealizedDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.RealizedDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CancellationDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.CancellationDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.CancellationDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CancellationNotes, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.CancellationNotes, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.CancellationNotes, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.Partial("_SaveButtonsPartial")
