--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
@@ -14,89 +14,7 @@
 }
 
 <h2>@EntityStrings.PurchaseOrder @ActionStrings.Details</h2>
-
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.OrderDate)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.OrderDate)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        <span class="approveText">@Html.DisplayNameFor(model => model.IsApproved)</span>
-        @Html.DisplayFor(m => m.IsApproved)
-    </label>
-    <div class="col-sm-6">
-        @Html.DisplayFor(m => m.ApproveDate)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.DueDate)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.DueDate)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Customer)
-    </label>
-    <div class="col-md-10 col-sm-9 fontSize150pc">
-        @Html.DisplayFor(m => m.Customer)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Product)
-    </label>
-    <div class="col-md-10 col-sm-9 fontSize150pc">
-        @Html.DisplayFor(m => m.Product)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Code)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Code)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Description)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Description)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Quantity)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Quantity)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.UnitPrice)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.UnitPrice)
-    </div>
-</div>
-@Html.Partial("_PoSizeRates")
-<div class="row mt15">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.Notes)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.Notes)
-    </div>
-</div>
+@Html.Partial("PartialDetails")
 <div class="row">
     <div class="col-sm-6 col-md-offset-2 col-sm-offset-3">
         @Html.ActionLink(@ActionStrings.BackToIndex, "Index", null, new { @class = "btn btn-default" })
@@ -104,11 +22,11 @@
         {
             @Html.ActionLink(@ActionStrings.Edit, "Edit", null, new { id = Model.Id }, new { @class = "btn btn-default" })
         }
-        @if (canUserCancelPO)
+        @if (canUserCancelPO && !Model.Cancelled)
         {
             @Html.ActionLink(@ActionStrings.CancelPO, "CancelPO", null, new { id = Model.Id }, new { @class = "btn btn-danger" })
         }
-        @if (!Model.IsApproved && canUserApprove)
+        @if (!Model.IsApproved && canUserApprove && !Model.Cancelled)
         {
             @Html.ActionLink(@ActionStrings.Approve, "Approve", null, new { id = Model.Id }, new { @class = "btn btn-success" })
         }
