--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -42,6 +42,7 @@
             <th>@Html.DisplayNameFor(model => model.DueDate)</th>
             <th>@Html.DisplayNameFor(model => model.Quantity)</th>
             <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
+            <th>@Html.DisplayNameFor(model => model.Cancelled)</th>
         </tr>
         @foreach (var item in Model)
         {
@@ -65,28 +66,32 @@
                                     </a>
                                 </li>
                             }
-                            @if (canUserCancelPO || (!item.IsApproved && canUserApprove))
+                            @if (!item.Cancelled && canUserCancelPO && !item.IsApproved && canUserApprove)
                             {
                                 <li class="divider"></li>
                             }
-                            @if (!item.IsApproved && canUserApprove)
+                            @if (!item.Cancelled && !item.IsApproved && canUserApprove)
                             {
                                 <li>@Html.ActionLink(ActionStrings.Approve, "Approve", new { id = item.Id })</li>
                             }
-                            @if (canUserCancelPO)
+                            @if (!item.Cancelled && canUserCancelPO)
                             {
                                 <li>@Html.ActionLink(ActionStrings.CancelPO, "CancelPO", new { id = item.Id })</li>
                             }
                         </ul>
                     </div>
                 </td>
-                <td>@Html.DisplayFor(modelItem => item.IsApproved) <span class="approveText">@Html.DisplayFor(i => item.ApproveDate)</span></td>
+                <td>@Html.DisplayFor(modelItem => item.IsApproved) <span class="checkboxText">@Html.DisplayFor(i => item.ApproveDate)</span></td>
                 <td>@Html.DisplayFor(modelItem => item.Product)</td>
                 <td>@Html.DisplayFor(modelItem => item.Customer)</td>
                 <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                 <td>@Html.DisplayFor(modelItem => item.DueDate)</td>
                 <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
                 <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cancelled)
+                    <span class="checkboxText">@Html.DisplayFor(modelItem => item.CancelDate)</span>
+                </td>
             </tr>
         }
     </table>
