--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Sizing.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Sizing.cshtml
@@ -7,5 +7,5 @@
 }
 @if (Model != null)
 {
-    <div class="col-xs-1 shadedCaption">@Model.Caption</div>
+    <div class="col-xs-1 shadedRoundCaption">@Model.Caption</div>
 }
