--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrder.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/PurchaseOrder.cshtml
@@ -11,28 +11,33 @@
     string collapseId = string.Format("collapse{0}", Model.Id);
     <div class="accordion">
         <div class="accordion-group shadedRoundCaption" id='@accordionId'>
-            <div class="accordion-heading fontSize125pc">
+            <div class="accordion-heading fontSize150pc">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent='#@accordionId' href='#@collapseId'>
                     @if (Model.Cancelled)
                     {
                         @Html.DisplayFor(m => m.Cancelled)
                     }
-                    @Html.DisplayNameFor(m => m.OrderDate): @Html.DisplayFor(m => m.OrderDate) |
                     @Html.DisplayFor(m => m.Customer.CompanyName)
                 </a>
             </div>
             <div id='@collapseId' class="accordion-body collapse">
                 <div class="accordion-inner text-left ml10 mt20 fontSize125pc">
                     <div class="fontSize125pc">
-                        @Html.DisplayNameFor(m => m.Product): @Model.Product.Title
+                       @Model.Product.Title
+                    </div>
+                    <div>
+                        @Html.DisplayNameFor(m => m.OrderDate):
+                        @Html.DisplayFor(m => m.OrderDate)
+                    </div>
+                    <div>
+                        @Html.DisplayNameFor(m => m.DueDate):
+                        @Html.DisplayFor(m => m.DueDate)
                     </div>
                     <div>
                         <span class="checkboxText">@Html.DisplayNameFor(m => m.IsApproved)</span>
                         @Html.DisplayFor(m => m.IsApproved)
                         <span class="checkboxText">
-                            @Html.DisplayFor(m => m.ApproveDate) |
-                            @Html.DisplayNameFor(m => m.DueDate):
-                            @Html.DisplayFor(m => m.DueDate)
+                            @Html.DisplayFor(m => m.ApproveDate)
                         </span>
                     </div>
                     <div>
