Added Supplier relations, to Product many to many, to Process one to many

--- a/Source/CriticalPath.Web/Views/ProcessSteps/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessSteps/Index.cshtml
@@ -37,9 +37,9 @@
         <tr>
             <th>@ActionStrings.Action</th>
             <th>@Html.DisplayNameFor(model => model.Title)</th>
-            <th>@Html.DisplayNameFor(model => model.IsApproved)</th>
-            <th>@Html.DisplayNameFor(model => model.TargetDate)</th>
-            <th>@Html.DisplayNameFor(model => model.ForecastDate)</th>
+            <th width="94px">@Html.DisplayNameFor(model => model.IsApproved)</th>
+            <th width="94px">@Html.DisplayNameFor(model => model.TargetDate)</th>
+            <th width="94px">@Html.DisplayNameFor(model => model.ForecastDate)</th>
             <th colspan="2">@Html.DisplayNameFor(model => model.IsCompleted)</th>
         </tr>
     @foreach (var item in Model)
