--- a/Source/CriticalPath.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,30 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using CP.i8n
+@using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
+    string userName = User.Identity.GetUserName();
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" title='@userName'>
+                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                    <span class="visible-lg-inline visible-md-inline">@userName</span><b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                    <li>@Html.ActionLink(ActionStrings.ChangePassword, "ChangePassword")</li>
+                    <li><a href="javascript:document.getElementById('logoutForm').submit()">@ActionStrings.LogOff</a></li>
+                </ul>
+            </li>
+        </ul>
     }
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink(OzzIdentity.Resources.TitleStrings.Register, "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink(OzzIdentity.Resources.TitleStrings.Login, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li>@Html.ActionLink(ActionStrings.Register, "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        <li>@Html.ActionLink(ActionStrings.Login, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
