ag-grid added to project

--- a/Source/CriticalPath.Web/Views/Processes/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Processes/Index.cshtml
@@ -92,5 +92,6 @@ else
     <h4>@MessageStrings.NoResults!</h4>
 }
 @section scripts{
+    @Scripts.Render("~/js/ag-grid")
     @Html.Partial("_IndexScriptsPartial", "Processes")
 }
