--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Critical Path Admin Panel</title>
     @Styles.Render(AppSettings.SelectedTheme)
+    @Styles.Render("~/css/ag-grid")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
