--- a/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
@@ -34,6 +34,8 @@
     <title>@ViewBag.Title - Critical Path Application</title>
 
     @Styles.Render(AppSettings.SelectedTheme)
+    @Styles.Render("~/css/ag-grid")
+
 
     @*
         @Styles.Render("~/Content/Slate")
