--- a/Source/CriticalPath.Web/Views/Suppliers/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Suppliers/Index.cshtml
@@ -30,60 +30,92 @@
 </div>
 @if (totalCount > 0)
 {
-    <table class="table table-hover">
-        <tr>
-            <th>@ActionStrings.Action</th>
-            <th>@Html.DisplayNameFor(model => model.CompanyName)</th>
-            <th>@Html.DisplayNameFor(model => model.SupplierCode)</th>
-            <th>@Html.DisplayNameFor(model => model.City)</th>
-            <th>@Html.DisplayNameFor(model => model.Country)</th>
-            <th>@Html.DisplayNameFor(model => model.Contacts)</th>
-        </tr>
-    @foreach (var item in Model)
-    {
-            <tr>
-                <td>
-                    <div class="btn-group">
-                        <button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li>@Html.ActionLink(ActionStrings.Details, "Details", new { id = item.Id })</li>
-                            @if (canUserEdit)
-                            {
-                                <li>@Html.ActionLink(ActionStrings.Edit, "Edit", new { id = item.Id })</li>
-                            }
-                            @if (canUserDelete)
-                            {
-                                <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.CompanyName)</b>', @item.Id);">
-                                        @ActionStrings.Delete
-                                    </a>
-                                </li>
-                            }
-                            <li class="divider"></li>
-                                <li>@Html.ActionLink(EntityStrings.AddContact, "Create", "Contacts", new { companyId = item.Id }, null)</li>
-                        </ul>
-                    </div>
-                </td>
-                <td>@Html.DisplayFor(modelItem => item.CompanyName)</td>
-                <td>@Html.DisplayFor(modelItem => item.SupplierCode)</td>
-                <td>@Html.DisplayFor(modelItem => item.City)</td>
-                <td>@Html.DisplayFor(modelItem => item.Country)</td>
-                <td>@item.Contacts.Count</td>
-            </tr>
-    }
-    </table>
+    <div id="suppliersGrid" class="ag-dark-blue ag-basic" style="width:948px;height:420px;"></div>
     @Html.Partial("_PagerPartial")
     if (canUserDelete)
     {
         @Html.Partial("_MessageBoxPartial")
     }
+    @section scripts{
+        @Scripts.Render("~/js/ag-grid")
+        @Html.Partial("_IndexScriptsPartial", "Suppliers")
+        <script type="text/javascript">
+            var initSuppliersGrid = function() {
+                var vm = this;
+                vm.rowData = @Html.Raw(ViewBag.suppliers);
+                vm.columnDefs = columnDefs();
+                vm.gridOptions = {
+                    columnDefs: vm.columnDefs,
+                    rowHeight: 28,
+                    headerHeight: 32,
+                    rowData: vm.rowData
+                };
+
+
+                function columnDefs(){
+                    return[
+                         { headerName: '@ActionStrings.Action', field: "Id", width: 64, cellRenderer: actionCellRenderer},
+                         { headerName: '@Html.DisplayNameFor(model => model.CompanyName)', field: "CompanyName", width: 300 },
+                         { headerName: '@Html.DisplayNameFor(model => model.SupplierCode)', field: "SupplierCode", width: 160 },
+                         { headerName: '@Html.DisplayNameFor(model => model.City)', field: "City" },
+                         { headerName: '@Html.DisplayNameFor(model => model.Country)', field: "Country" }
+                    ];
+                }
+
+                var True = true;
+                var False = false;
+                var canUserDelete = @canUserDelete;
+                var canUserEdit = @canUserEdit;
+                var canUserAddContact = @canUserCreate;
+
+                function actionCellRenderer(params) {
+                    var actions = '<div class="btn-group">' +
+                        '<button type="button" title="@ActionStrings.Action" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" onclick="onActionClicked(this)">' +
+                        '<span class="glyphicon glyphicon-tasks"></span> <span class="caret"></span>' +
+                        '</button>' +
+                        '<ul class="dropdown-menu" role="menu">' +
+                        '<li><a href="/Suppliers/Details/' + params.value + '">@ActionStrings.Details</a></li>';
+                    if(canUserDelete){
+                        actions = actions + '<li><a href="/Suppliers/Edit/' + params.value + '">@ActionStrings.Edit</a></li>';
+                    }
+                    if(canUserDelete){
+                        actions = actions + '<li><a href="#deleteConfirm" data-toggle="modal" onclick="setDelete(\'Dnm\', '
+                            + params.value + ');">@ActionStrings.Delete</a></li>';
+                    }
+                    actions = actions + '<li class="divider"></li>';
+                    if(canUserAddContact){
+                        actions = actions + '<li><a href="/Contacts/Create/?companyId=' + params.value + '">@EntityStrings.AddContact</a></li>';
+                    }
+                    actions = actions + '<li><a href="/Contacts/Index/?companyId=' + params.value + '">@EntityStrings.Contacts</a></li>';
+                    actions = actions + '</ul></div>';
+
+                    return actions;
+                }
+
+                // angularGrid is a global function
+                agGridGlobalFunc('#suppliersGrid', vm.gridOptions);
+                return vm;
+            }
+
+            function onActionClicked(menuBtn){
+                var menuHeight = 180;
+                var rectMenu = menuBtn.getBoundingClientRect();
+                var rectGrid = document.getElementById("suppliersGrid").getBoundingClientRect();
+
+                var diffY = rectGrid.bottom - rectMenu.bottom - menuHeight;
+                if (diffY < 0) {
+                    setTimeout(function(){
+                        $('#suppliersGrid .ag-body-viewport').scrollTop(diffY * -1);
+                        //document.getElementById("dnm").innerHTML = diffY;
+                    },250);
+                }
+            }
+
+            document.addEventListener("DOMContentLoaded", initSuppliersGrid());
+        </script>
+    }
 }
 else
 {
     <h4>@MessageStrings.NoResults!</h4>
-}
-@section scripts{
-    @Html.Partial("_IndexScriptsPartial", "Suppliers")
 }
