--- a/Source/CriticalPath.Web/Views/Products/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Create.cshtml
@@ -21,7 +21,7 @@
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-        @Html.Partial("_ProductCategorySelectPartial", Model);
+        @Html.Partial("_ProductCategorySelectPartial", Model)
         <div class="form-group">
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
@@ -34,6 +34,13 @@
             <div class="col-lg-7 col-md-8 col-sm-9">
                 @Html.TextAreaFor(m => m.Description, 4, 1, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.SizingStandardId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownList("SizingStandardId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.SizingStandardId, "", new { @class = "text-danger" })
             </div>
         </div>
         @Html.Partial("_SaveButtonsPartial")
