--- a/Source/CriticalPath.Web/Views/Products/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Edit.cshtml
@@ -36,6 +36,13 @@
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.SizingStandardId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            <div class="col-lg-5 col-md-6 col-sm-7">
+                @Html.DropDownList("SizingStandardId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.SizingStandardId, "", new { @class = "text-danger" })
+            </div>
+        </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
