--- a/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_ProductCategorySelectPartial.cshtml
@@ -22,17 +22,17 @@
     $('#ParentCategoryId').change(function () {
         var selectedId = $(this).val();
         if (selectedId != null && selectedId != '') {
-            $.getJSON('/ProductCategories/SubCategories', { parentCategoryId: selectedId }, function (subCategories) {
+            $.getJSON('/ProductCategories/GetProductCategoryList', { parentCategoryId: selectedId, pageSize: 100 }, function (categories) {
                 var targetSelect = $('#CategoryId');
                 targetSelect.empty();
                 targetSelect.append($('<option/>', {
                     value: '',
                     text: '@ActionStrings.SelectPlease'
                 }));
-                $.each(subCategories, function (index, subCategory) {
+                $.each(categories, function (index, category) {
                     targetSelect.append($('<option/>', {
-                        value: subCategory.Id,
-                        text: subCategory.Title
+                        value: category.Id,
+                        text: category.Title
                     }));
                 });
             });
